--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=WeatherApp
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/weatherappdb
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/weatherappdb}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:hrana}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:rana123}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Configuration
